# ScrubbeRS

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benches/: throughput.rs
bindings/node/: Cargo.toml  README.md  smoke_test.cjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  smoke_test.py
bindings/python/src/: lib.rs
examples/: default.scrub
scripts/: bench_python_bindings.py  manual_smoke.sh  release.py  sync_trufflehog_pattern_fixtures.go  sync_trufflehog_signatures.py  test_bindings.py  test_python_package.py  verify_trufflehog_coverage.py
src/: generated_trufflehog.rs  lib.rs  main.rs  signatures.rs
tests/: cli_scrub_file.rs  cli_smoke.rs  cli_streaming.rs  generated_trufflehog_pattern_fixtures.rs  trufflehog_redaction.rs  trufflehog_sync.rs
