[package]
name = "scrubbers"
version = "0.1.0"
edition = "2021"
description = "High-throughput redaction engine + CLI"
license = "MIT"

[lib]
name = "scrubbers"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "scrubbers"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
thiserror = "1.0"

pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
napi = { version = "2.16", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "2.16", optional = true }

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

