[package]
name = "scrubbers"
version = "0.1.0"
edition = "2021"
description = "High-throughput redaction engine + CLI"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zmackie/ScrubbeRS"
homepage = "https://github.com/zmackie/ScrubbeRS"
documentation = "https://docs.rs/scrubbers"
keywords = ["redaction", "secrets", "scrubbing", "logging", "security"]
categories = ["command-line-utilities", "text-processing"]

[workspace]
members = ["bindings/python", "bindings/node"]
default-members = ["."]

[lib]
name = "scrubbers"
crate-type = ["rlib"]

[[bin]]
name = "scrubbers"
path = "src/main.rs"
bench = false

[[bin]]
name = "scrub-bench"
path = "src/bin/scrub-bench.rs"
bench = false

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
panic = "abort"
