[package]
name = "scrubbers-python-binding"
version = "0.1.0"
edition = "2021"
description = "Python extension module for the scrubbers Rust redaction engine"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zmackie/ScrubbeRS"
homepage = "https://github.com/zmackie/ScrubbeRS"
publish = false

[lib]
name = "scrubbers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
scrubbers_core = { package = "scrubbers", path = "../.." }

[build-dependencies]
pyo3-build-config = "0.22"
